5-Метрики/Задание 1/oncall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oncall
  namespace: st-ab5-statsenko
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8888"
    prometheus.io/path: /metrics
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oncall
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP    
      port: 8888
      targetPort: 8888
